[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gateway_setup"
version = "0.1.0"
description = "A utility to configure a gateway for a private network."
authors = ["Your Name <youremail@domain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
prompt-toolkit = "^3.0.18"
argparse = "^1.4.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
