[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gateway_setup"
version = "0.1.1"  # Version bumped
description = "A utility to configure a NAT gateway for a private network in Linux."
authors = ["Brandon Geraci <brandon.geraci@gmail.com>"]
readme = "README.md"
license = "MIT"  # You may want to specify a license

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
prompt-toolkit = "^3.0.18"
argparse = "^1.4.0"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"  # Added pytest for running tests
